# serializer version: 1
# name: test_numbers[number.feeder_feed_audio_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.feeder_feed_audio_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Feed audio volume',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Feed audio volume',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'feed_audio_volume',
    'unique_id': 'A0F26219DC34_feed_audio_volume',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.feeder_feed_audio_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Feeder Feed audio volume',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.feeder_feed_audio_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_numbers[number.feeder_portions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.feeder_portions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Portions',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Portions',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'portions',
    'unique_id': 'A0F26219DC34_portions',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[number.feeder_portions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Feeder Portions',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.feeder_portions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_numbers[number.kitchen_fountain_circulation_pump_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_fountain_circulation_pump_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Circulation pump speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Circulation pump speed',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'circulation_pump_speed',
    'unique_id': '188B0EAF2D7C_circulation_pump_speed',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.kitchen_fountain_circulation_pump_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Circulation pump speed',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_circulation_pump_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
# name: test_numbers[number.kitchen_fountain_clean_tank_low_threshold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3600,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_fountain_clean_tank_low_threshold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Clean tank low threshold',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Clean tank low threshold',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'threshold_clean_tank_low',
    'unique_id': '188B0EAF2D7C_threshold_clean_tank_low',
    'unit_of_measurement': <UnitOfVolume.MILLILITERS: 'mL'>,
  })
# ---
# name: test_numbers[number.kitchen_fountain_clean_tank_low_threshold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'volume',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Clean tank low threshold',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3600,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 10,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolume.MILLILITERS: 'mL'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_clean_tank_low_threshold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '600',
  })
# ---
# name: test_numbers[number.kitchen_fountain_daily_drinking_goal-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 50,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_fountain_daily_drinking_goal',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Daily drinking goal',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Daily drinking goal',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'daily_drinking_goal',
    'unique_id': '188B0EAF2D7C_daily_drinking_goal',
    'unit_of_measurement': <UnitOfVolume.MILLILITERS: 'mL'>,
  })
# ---
# name: test_numbers[number.kitchen_fountain_daily_drinking_goal-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'volume',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Daily drinking goal',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3000,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 50,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolume.MILLILITERS: 'mL'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_daily_drinking_goal',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '500',
  })
# ---
# name: test_numbers[number.kitchen_fountain_dirty_tank_full_threshold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3600,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_fountain_dirty_tank_full_threshold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dirty tank full threshold',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.VOLUME: 'volume'>,
    'original_icon': None,
    'original_name': 'Dirty tank full threshold',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'threshold_dirty_tank_full',
    'unique_id': '188B0EAF2D7C_threshold_dirty_tank_full',
    'unit_of_measurement': <UnitOfVolume.MILLILITERS: 'mL'>,
  })
# ---
# name: test_numbers[number.kitchen_fountain_dirty_tank_full_threshold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'volume',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Dirty tank full threshold',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 3600,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 10,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfVolume.MILLILITERS: 'mL'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_dirty_tank_full_threshold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '600',
  })
# ---
# name: test_numbers[number.kitchen_fountain_heating_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.kitchen_fountain_heating_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heating temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating temperature',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_temperature',
    'unique_id': '188B0EAF2D7C_heating_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_numbers[number.kitchen_fountain_heating_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Heating temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 20,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_heating_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28',
  })
# ---
# name: test_numbers[number.kitchen_fountain_radar_sensitivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.kitchen_fountain_radar_sensitivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Radar sensitivity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Radar sensitivity',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'radar_sensitivity',
    'unique_id': '188B0EAF2D7C_radar_sensitivity',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[number.kitchen_fountain_radar_sensitivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen fountain Radar sensitivity',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.kitchen_fountain_radar_sensitivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
